TL-19512 theme: Stopped inpage modals having a high z-index

--- a/theme/roots/less/totara/modal.less
+++ b/theme/roots/less/totara/modal.less
@@ -91,3 +91,7 @@ body {
     z-index: 1000;
     background-color: @modal-backdrop-bg;
 }
+
+.modal-in-page {
+    z-index: 0;
+}
